Refactored sub task
